--- a/src/app/employee/update-employee-details/update-employee-details.component.html
+++ b/src/app/employee/update-employee-details/update-employee-details.component.html
@@ -1,7 +1,17 @@
+<!-- <p>update-employee-details works!</p>
+<br>Selected employee id {{employee.employeeId}} -->
 
 <div class="container" [hidden]="submitted">
-    <h4>Add New Employee</h4>
+    <h4>Update Employee </h4>
     <form (ngSubmit)="onFormSubmit()">
+        <div class="row">
+            <div class="col-25">
+                <label for="empId">Employee Id</label>
+            </div>
+            <div class="col-75">
+                <input type="text" id="empId" name="employeeId" [(ngModel)]="employee.employeeId" disabled>
+            </div>
+        </div>
         <div class="row">
             <div class="col-25">
                 <label for="fname">Name</label>
@@ -19,12 +29,12 @@
             </div>
         </div>
         <div class="row">
-            <input type="submit" value="Add New Employee">
+            <input type="submit" value="Update New Employee">
         </div>
     </form>
 </div>
 <div class="container" [hidden]="!submitted">
-    <p> Employee Added Succesfully</p>
+    <p> Employee Updated Succesfully</p>
     <div class="row">
         <input type="button" (click)="goToHome()" value="Back to home">
         </div>
